Issue #16: fixed URL line-wrapping with CSS

--- a/RecentTabList.safariextension/style.css
+++ b/RecentTabList.safariextension/style.css
@@ -30,6 +30,7 @@ html {
 .url {
 	font-size: 0.8em;
 	opacity: 0.7;
+	word-break: break-word;
 }
 
 #clearFilter {
@@ -143,8 +144,6 @@ li.tab {
 	position: absolute;
 	display: block;
 }
-
-
 
 #recentSection .tab:hover .delete {
 	opacity: 0.3;
